force-app/main/default/objects/Verifone__c/Verifone__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Verifone</label>
</CustomObject>