force-app/main/default/objects/Verifone__c/fields/Accountid__c.field-meta.xml
<CustomField>
    <fullName>Accountid__c</fullName>
    <label>Accountid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>