force-app/main/default/objects/Verifone__c/fields/Merchantid__c.field-meta.xml
<CustomField>
    <fullName>Merchantid__c</fullName>
    <label>Merchantid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>