force-app/main/default/objects/Verifone__c/fields/Systemguid__c.field-meta.xml
<CustomField>
    <fullName>Systemguid__c</fullName>
    <label>System Guid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>